move to java 12